<resources>
    <string name="app_name">HealthKonn</string>
    <string name="search_hint">Search here</string>
    <string name="search_view">Enter search</string>
    <!-- Strings related to login -->
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_login">Log In</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="SignUp">Dont have an account? Sign Up</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
